--- a/Michus/Views/Menu/Index.cshtml
+++ b/Michus/Views/Menu/Index.cshtml
@@ -1,5 +1,6 @@
-﻿@{
-    ViewData["Title"] = "Index";
+@model Michus.Models.DashboardViewModel
+@{
+    ViewData["Title"] = "Dashboard";
 }
 
 <style>
@@ -55,7 +56,6 @@
     .totals-card:nth-child(3) {
         background-color: #d1ffd1; /* Verde pastel */
     }
-
 
 </style>
 <div class="min-h-screen bg-gray-100 py-6">
