--- a/Michus/Views/Promociones/ListarPromociones.cshtml
+++ b/Michus/Views/Promociones/ListarPromociones.cshtml
@@ -127,6 +127,7 @@
                                 <!-- Tipo de la Promoción -->
                                 <div class="form-group mb-3">
                                     <select class="form-control" id="tipoPromocion" name="tipoPromocion" required style="border-radius: 8px; padding: 12px; font-size: 16px; border: 1px solid #ddd; width: 98%;">
+                                        <option value="" disabled selected>Seleccione un tipo de promoción</option>
                                         <option value="0">Fijo</option>
                                         <option value="1">Porcentual</option>
                                     </select>
@@ -361,4 +362,4 @@
 
 
 </script>
-<!-- Actualizado a la fecha 24/11/2024 -->
+<!-- Actualizado a la fecha 26/11/2024 -->
